[package]
name = "maconomy-cli"
version = "0.1.0"
edition = "2021"
description = "Maconomy command-line interface for interacting with time sheets"

[[bin]]
name = "maconomy"
path = "src/main.rs"

# [lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[dependencies]
anyhow = "1.0.93"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
config = "0.14.1"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
tabled = {version = "0.16.0", features = ["ansi"]}
owo-colors = "4"
chrono = "0.4.38"
color-print = "0.3.6"
uuid = { version = "1.11.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
shellexpand = "3.1.0"
thiserror = "2.0.0"
bytes = "1.8.0"
nom = "7.1.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_cmd = "2.0.16"
wiremock = "0.6.2"
predicates = "3.1.2"
insta = { version = "1.41.1", features = ["yaml", "json"] }
anstyle = "1.0.10"
anstream = "0.6.18"

# Improved insta runtime
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
