[package]
name = "maconomy-cli"
version = "0.1.0"
edition = "2021"
description = "Maconomy command-line interface for interacting with time sheets"

[[bin]]
name = "maconomy"
path = "src/main.rs"

# [lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[dependencies]
anyhow = "1.0.98"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.31"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.14.1"
reqwest = { version = "0.12.20", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
tabled = {version = "0.16.0", features = ["ansi"]}
owo-colors = "4"
chrono = "0.4.41"
color-print = "0.3.7"
uuid = { version = "1.17.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
shellexpand = "3.1.1"
thiserror = "2.0.12"
bytes = "1.10.1"
nom = "7.1.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_cmd = "2.0.17"
wiremock = "0.6.3"
predicates = "3.1.3"
insta = { version = "1.43.1", features = ["yaml", "json"] }
anstyle = "1.0.11"
anstream = "0.6.19"

# Improved insta runtime
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
