[package]
name = "maconomy-cli"
version = "0.1.0"
edition = "2021"
description = "Maconomy command-line interface for interacting with time sheets"

[[bin]]
name = "maconomy"
path = "src/main.rs"

# [lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[dependencies]
anyhow = "1.0.101"
chromiumoxide = { version = "0.8.0", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.31"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
tabled = {version = "0.20.0", features = ["ansi"]}
owo-colors = "4"
chrono = "0.4.43"
color-print = "0.3.7"
uuid = { version = "1.20.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
shellexpand = "3.1.1"
thiserror = "2.0.18"
bytes = "1.11.1"
nom = "8.0.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_cmd = "2.1.2"
wiremock = "0.6.5"
predicates = "3.1.3"
insta = { version = "1.46.3", features = ["yaml", "json"] }
anstyle = "1.0.13"
anstream = "0.6.21"

# Improved insta runtime
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
